[shenker/cloning] This code was used on 200727 to import Densmore, 3G, and JUMP parts into the LIB_parts spreadsheet. RpaI and RhlI had internal BsaI sites and needed manual editing. Everything else appeared to work.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200727 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200727 LIB parts ingest.ipynb
@@ -10,10 +10,13 @@
     "import re\n",
     "import urllib\n",
     "from datetime import datetime\n",
+    "import string\n",
     "import pygsheets\n",
     "import benchlingapi\n",
     "import requests_html\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n",
+    "import Bio.Restriction as Restriction\n",
+    "from Bio.Seq import Seq"
    ]
   },
   {
@@ -255,6 +258,10 @@
     "    return part\n",
     "\n",
     "\n",
+    "def _format_seq(seq):\n",
+    "    return str(seq).lower()\n",
+    "\n",
+    "\n",
     "def plasmid_to_part(plasmid, enzyme, seq):\n",
     "    plasmid_id = plasmid[\"ID*\"]\n",
     "    subseqs = golden_gate.re_digest(seq, enzyme, linear=False)\n",
@@ -265,10 +272,9 @@
     "    part[\"Plasmid/Oligos (Cutter)*\"] = f\"{plasmid_id}/{enzyme.__name__}\"\n",
     "    # part[\"Author*\"] = \"\"\n",
     "    part[\"Date*\"] = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "    part[\"Upstream overhang*\"] = str(overhang1[0])\n",
-    "    part[\"Downstream overhang*\"] = str(overhang2[0])\n",
-    "    # part[\"Sequence*\"] = str(overhang1[0]) + str(sequence.get_seq(seq)) + str(overhang2[0])\n",
-    "    part[\"Sequence*\"] = str(sequence.get_seq(seq))\n",
+    "    part[\"Upstream overhang*\"] = _format_seq(overhang1[0])\n",
+    "    part[\"Downstream overhang*\"] = _format_seq(overhang2[0])\n",
+    "    part[\"Sequence*\"] = _format_seq(overhang1[0] + sequence.get_seq(seq) + overhang2[0])\n",
     "    part[\"Organism/codon usage*\"] = \"E. coli\"\n",
     "    part[\"Description\"] = plasmid[\"Description\"]\n",
     "    # part[\"Source\"] = plasmid[\"Source*\"]\n",
@@ -314,7 +320,7 @@
    "outputs": [],
    "source": [
     "parts = []\n",
-    "for row in tqdm(rows[:3]):\n",
+    "for row in tqdm(rows):\n",
     "    matched = None\n",
     "    for predicate, rule in part_rules:\n",
     "        if predicate(row):\n",
@@ -342,6 +348,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# first_row = workflow.get_next_empty_row(part_sheet)\n",
+    "first_row = 2  # we actually want to insert before existing rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = part_sheet.get_row(1)\n",
+    "overhang1_col = string.ascii_uppercase[cols.index(\"Upstream overhang*\")]\n",
+    "overhang2_col = string.ascii_uppercase[cols.index(\"Downstream overhang*\")]\n",
+    "seq_col = string.ascii_uppercase[cols.index(\"Sequence*\")]\n",
+    "formula_cols = {}\n",
+    "for enzyme_name in (\"BsaI\", \"BsmBI\", \"AarI\", \"BbsI\"):\n",
+    "    enzyme = getattr(Restriction, enzyme_name)\n",
+    "    site1 = enzyme.site\n",
+    "    site2 = str(Seq(site1).reverse_complement())\n",
+    "    for row, part in enumerate(parts, first_row):\n",
+    "        part[\n",
+    "            enzyme_name\n",
+    "        ] = f'=IF(AND(ISERROR(SEARCH(\"{site1}\",${seq_col}{row})), ISERROR(SEARCH(\"{site2}\",${seq_col}{row}))),\"\",\"yes\")'\n",
+    "for row, part in enumerate(parts, first_row):\n",
+    "    part[\n",
+    "        \"Type*\"\n",
+    "    ] = f\"=ArrayFormula(INDEX('Part types'!A:A, MATCH(${overhang1_col}{row}&\\\" \\\"&${overhang2_col}{row},{{'Part types'!B:B&\\\" \\\"&'Part types'!C:C}},0)))\"\n",
+    "    part[\n",
+    "        \"Correct overhangs?\"\n",
+    "    ] = f'=IF(AND(LEFT(${seq_col}{row},LEN(${overhang1_col}{row}))=${overhang1_col}{row},RIGHT(${seq_col}{row},LEN(${overhang2_col}{row}))=${overhang2_col}{row}),\"\",\"no\")'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "parts[0]"
    ]
   },
@@ -351,16 +395,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parts[0][\"Upstream overhang*\"].__str__()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parts[0][\"Upstream overhang*\"].__str__"
+    "# part_sheet.spreadsheet.default_parse must be True for formula to be parsed, but this is True by default\n",
+    "workflow._insert_rows(part_sheet, first_row, parts)"
    ]
   },
   {
