[deaton/trenchripper,deaton/marlin_libraries] trenchripper environment update.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-07-19_analyzing_lDE2/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/dev_notebooks/2020-07-19_analyzing_lDE2/Master.ipynb
@@ -533,7 +533,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask_controller.daskclient"
+    "dask_controller.daskclient.restart()"
    ]
   },
   {
@@ -758,6 +758,15 @@
     "- **t_subsample_step (int)** : Step size to be used for subsampling input files in time, recommend that subsampling results in <br>between 5 and 10 timepoints for quick processing.\n",
     "\n",
     "Hit the \"Run Interact\" button to lock in your parameters. The button will become transparent briefly and become solid again <br>when processing is complete. After that has occured, move on to the next step. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]"
    ]
   },
   {
@@ -3908,7 +3917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.5"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
