[shenker/microscope_design] WIP tweaked continuously variable filter modeling.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_img = tifffile.imread(\"t000001xy14c2.tif\")\n",
+    "sample_img = tifffile.imread(\"data/images/t000001xy14c2.tif\")\n",
     "scale = 4.25 / 20\n",
     "sample_img = sample_img / sample_img.max()\n",
     "sample_img = simulation.image_to_xarray(sample_img, scale).astype(np.float32)"
@@ -814,7 +814,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera_incident_no_qe.plot(size=20)"
+    "camera_incident_no_qe.plot(size=20, aspect=4)"
    ]
   },
   {
@@ -858,7 +858,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mirror_spectra.plot(xlim=(300, 800))"
+    "mirror_spectra.plot(xlim=(300, 800), figsize=(15, 6))"
    ]
   },
   {
@@ -886,7 +886,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lens_spectra.plot(xlim=(300, 800))"
+    "lens_spectra.plot(xlim=(300, 800), figsize=(15, 6))"
    ]
   },
   {
@@ -944,7 +944,7 @@
     "    ),\n",
     "    axis=1,\n",
     ").interpolate()\n",
-    "emission_path_spectra.plot(xlim=(300, 800))"
+    "emission_path_spectra.plot(xlim=(200, 800), figsize=(15, 6))"
    ]
   },
   {
@@ -1074,11 +1074,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from glob import glob\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objectives = {}\n",
+    "for filename in glob(\"data/objectives/olympus/*.csv\"):\n",
+    "    name = re.sub(\"\\.csv$\", \"\", os.path.basename(filename))\n",
+    "    objective = pd.read_csv(\n",
+    "        filename, header=None, names=[\"Wavelength\", \"Transmittance\"]\n",
+    "    ).set_index(\"Wavelength\")\n",
+    "    objective /= 100\n",
+    "    objective = objective[~objective.index.duplicated(keep=\"first\")]\n",
+    "    objective = simulation.interpolate_dataframe(objective, excitation_bins)\n",
+    "    objectives[name] = objective[\"Transmittance\"]\n",
+    "objectives = pd.concat(objectives, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objectives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Overlay(\n",
+    "    [\n",
+    "        hv.Curve((objectives.index, objectives[col]), label=col)\n",
+    "        for col in objectives.columns\n",
+    "    ]\n",
+    ").opts(width=900, height=700, legend_position=\"bottom_right\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ds = hv.Dataset(df).sort(['Year', 'Period'])\n",
+    "# ds.to(hv.Curve, 'Order' ,'Cumulative', 'Id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(objectives)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "objective = pd.read_csv(\n",
-    "    \"data/objective_transmittance/uplxapo_20x.csv\",\n",
+    "    \"data/objectives/olympus/UPLXAPO20x.csv\",\n",
     "    header=None,\n",
     "    names=[\"Wavelength\", \"Transmittance\"],\n",
     ").set_index(\"Wavelength\")\n",
+    "objective = objective.iloc[~objective.index.duplicated()]\n",
     "objective /= 100\n",
     "objective = simulation.interpolate_dataframe(objective, excitation_bins)"
    ]
