--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
@@ -33,7 +33,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = simulation.ureg"
+    "# u = simulation.ureg\n",
+    "class ObjProxy(object):\n",
+    "    def __init__(self, module_name, attr_name):\n",
+    "        self.__module_name = module_name\n",
+    "        self.__attr_name = attr_name\n",
+    "\n",
+    "    def __getattr__(self, name):\n",
+    "        return getattr(getattr(globals()[self.__module_name], self.__attr_name), name)\n",
+    "\n",
+    "\n",
+    "u = ObjProxy(\"simulation\", \"ureg\")"
    ]
   },
   {
@@ -78,6 +88,38 @@
    "outputs": [],
    "source": [
     "(power / (width * height)).to(\"kW/cm^2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FWHM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laser_cwl = 700\n",
+    "delta_lmbda = 25\n",
+    "xs = np.linspace(laser_cwl - delta_lmbda, laser_cwl + delta_lmbda, 10 * delta_lmbda)\n",
+    "fwhm = 3\n",
+    "sigma = fwhm / (2 * np.sqrt(2 * np.log(2)))\n",
+    "laser_spectrum = norm.pdf(xs, laser_cwl, sigma)\n",
+    "lines = (\n",
+    "    hv.VLine(x=laser_cwl).opts(color=\"red\")\n",
+    "    * hv.VLine(x=laser_cwl + 5).opts(color=\"red\", line_dash=[2, 8])\n",
+    "    * hv.VLine(x=laser_cwl + 10).opts(color=\"red\", line_dash=\"dashed\")\n",
+    "    * hv.VLine(x=laser_cwl + 15).opts(color=\"red\", line_dash=\"dotdash\")\n",
+    "    * hv.VLine(x=laser_cwl + 20).opts(color=\"red\", line_dash=\"dotted\")\n",
+    "    * hv.HLine(y=-4).opts(color=\"orange\")\n",
+    "    * hv.HLine(y=-6).opts(color=\"orange\")\n",
+    ")\n",
+    "hv.Curve((xs, np.log10(laser_spectrum))) * lines\n",
+    "# ).redim.range(wavelength=(laser_cwl-10, laser_cwl+25), transmission=(-8,0)).opts(width=600)"
    ]
   },
   {
@@ -234,8 +276,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filters, filter_peaks = load_filter_spectra(\"LF102474.csv.csv\")\n",
-    "filters, filter_peaks = simulation.load_filter_spectra(\"LF103454.csv\")"
+    "# filters, filter_peaks = read_filter_spectra(\"data/filter_spectra/LF102474.csv.csv\")\n",
+    "filters = simulation.read_filter_spectra(\"data/filter_spectra/LF103454.csv\")"
    ]
   },
   {
@@ -244,132 +286,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted(filter_peaks.items())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(filter_spectrum)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = 86.0\n",
-    "filter_spectrum = filters[idx]\n",
-    "# index = pd.Series(np.linspace(laser_cwl-40,laser_cwl+40,200))\n",
-    "# index = pd.Series(np.linspace(filter_spectrum.index[0],filter_spectrum.index[-1],10000))\n",
-    "# filter_spectrum = filter_spectrum.reindex(index=index)\n",
-    "# filter_spectrum.interpolate(method='nearest', inplace=True)\n",
-    "# index = filter_spectrum.index\n",
-    "filter_spectrum /= filter_spectrum.max()\n",
+    "# filter_spectrum /= filter_spectrum.max()\n",
     "filter_thresh = 0.8\n",
-    "laser_cwl = (filter_spectrum > filter_thresh)[::-1].idxmax()[0]\n",
-    "new_index = pd.Index(np.linspace(laser_cwl - 40, laser_cwl + 40, 100))\n",
-    "index = filter_spectrum.index.astype(np.float).union(new_index)\n",
-    "index.name = \"wavelength\"\n",
-    "filter_spectrum = filter_spectrum.reindex(index=index)\n",
-    "filter_spectrum.interpolate(method=\"linear\", inplace=True)\n",
-    "index = filter_spectrum.index  # probably unnecessary\n",
-    "# laser_cwl = 730\n",
-    "# temporal_fwhm = 110 * u.femtoseconds\n",
-    "# spectral_width = (lmbda**2/(u.speed_of_light * temporal_fwhm)).to(\"nm\")\n",
-    "# tbwp = 0.6\n",
-    "# laser_sigma = tbwp * spectral_width / (2 * np.sqrt(2 * np.log(2)))\n",
-    "laser_bandwidth = (\n",
-    "    200 * 1 / u.cm\n",
-    ")  # (tbwp/(u.speed_of_light * temporal_fwhm)).to(\"cm^-1\")\n",
-    "laser_fwhm = (laser_bandwidth * (laser_cwl * u.nm) ** 2).to(\"nm\")\n",
-    "laser_sigma = laser_fwhm / (2 * np.sqrt(2 * np.log(2)))\n",
-    "# laser_sigma = 2#5.1\n",
-    "laser_spectrum = norm.pdf(index.values, laser_cwl, laser_sigma)\n",
-    "laser_spectrum /= np.nanmax(laser_spectrum)\n",
-    "laser_spectrum = pd.Series(laser_spectrum, index=index, name=\"transmission\")\n",
-    "# laser_spectrum[laser_spectrum == 0] = np.nan\n",
-    "output_spectrum = filter_spectrum.multiply(laser_spectrum, axis=0)\n",
-    "lines = (\n",
-    "    hv.VLine(x=laser_cwl).opts(color=\"red\")\n",
-    "    * hv.VLine(x=laser_cwl + 5).opts(color=\"red\", line_dash=[2, 8])\n",
-    "    * hv.VLine(x=laser_cwl + 10).opts(color=\"red\", line_dash=\"dashed\")\n",
-    "    * hv.VLine(x=laser_cwl + 15).opts(color=\"red\", line_dash=\"dotdash\")\n",
-    "    * hv.VLine(x=laser_cwl + 20).opts(color=\"red\", line_dash=\"dotted\")\n",
+    "filter_cutoffs = {}\n",
+    "for filter_name, filter_spectrum in filters.items():\n",
+    "    cutoff = (filter_spectrum > filter_thresh * filter_spectrum.max())[::-1].idxmax()[0]\n",
+    "    filter_cutoffs[filter_name] = cutoff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted(filter_cutoffs.items())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum = pd.read_csv(\"data/laser_spectra/discovery_660nm.csv\").set_index(\n",
+    "    \"Wavelength\"\n",
     ")\n",
-    "(\n",
-    "    (\n",
-    "        hv.Curve(np.log10(laser_spectrum))\n",
-    "        * hv.Curve(np.log10(filter_spectrum))\n",
-    "        * hv.Curve(np.log10(output_spectrum)).opts(color=\"purple\")\n",
-    "        * lines\n",
-    "        * hv.HLine(y=-4).opts(color=\"orange\")\n",
-    "        * hv.HLine(y=-6).opts(color=\"orange\")\n",
-    "    )\n",
-    "    .redim.range(wavelength=(laser_cwl - 10, laser_cwl + 25), transmission=(-8, 0))\n",
-    "    .opts(width=600)\n",
-    "    + (\n",
-    "        hv.Curve(laser_spectrum)\n",
-    "        * hv.Curve(filter_spectrum)\n",
-    "        * hv.Curve(output_spectrum).opts(color=\"purple\")\n",
-    "        * lines\n",
-    "    )\n",
-    "    .redim(transmission=hv.Dimension(\"power\", range=(0, 1)))\n",
-    "    .opts(width=600)\n",
-    ").cols(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "laser_fwhm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(filters[idx])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(filters[5.0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.read_csv(\"discovery_660nm.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "beam_spectrum = pd.read_csv(\"discovery_660nm.csv\").set_index(\"Wavelength\")\n",
     "beam_spectrum /= beam_spectrum.max()\n",
-    "laser_cwl = beam_spectrum.idxmax()[0]\n",
+    "# laser_cwl = beam_spectrum.idxmax()[0]\n",
     "log_beam_spectrum = np.log10(beam_spectrum)\n",
     "log_beam_spectrum[np.isinf(log_beam_spectrum)] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum2 = beam_spectrum.copy()\n",
+    "beam_spectrum2.index += laser_cwl - beam_spectrum.idxmax()[0]"
    ]
   },
   {
@@ -391,6 +354,247 @@
     "    * hv.HLine(y=-2).opts(color=\"orange\")\n",
     "    * hv.HLine(y=-3).opts(color=\"orange\")\n",
     ").opts(width=600)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Laser spectrum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_laser_spectrum(\n",
+    "    cwl, lmbdas, bandwidth=None, fwhm=None, sigma=None, temporal_fwhm=None, tbwp=None\n",
+    "):\n",
+    "    params_given = sum([bandwidth is not None, fwhm is not None, sigma is not None])\n",
+    "    if not (\n",
+    "        params_given == 1\n",
+    "        or (params_given == 0 and temporal_fwhm is not None and tbwp is not None)\n",
+    "    ):\n",
+    "        raise ValueError(\n",
+    "            \"exactly one of bandwidth/fwhm/sigma, or both temporal_fwhm and tbwp, must be specified\"\n",
+    "        )\n",
+    "    #     laser_bandwidth = (\n",
+    "    #     130 * 1 / u.cm\n",
+    "    #     )  # (tbwp/(u.speed_of_light * temporal_fwhm)).to(\"cm^-1\")\n",
+    "    fwhm = (bandwidth * (cwl * u.nm) ** 2).to(\"nm\")\n",
+    "    sigma = fwhm / (2 * np.sqrt(2 * np.log(2)))\n",
+    "    # laser_sigma = 2#5.1\n",
+    "    # laser_cwl = 730\n",
+    "    # temporal_fwhm = 110 * u.femtoseconds\n",
+    "    # spectral_width = (lmbda**2/(u.speed_of_light * temporal_fwhm)).to(\"nm\")\n",
+    "    # tbwp = 0.6\n",
+    "    # laser_sigma = tbwp * spectral_width / (2 * np.sqrt(2 * np.log(2)))\n",
+    "    spectrum = norm.pdf(lmbdas, cwl, sigma)\n",
+    "    spectrum /= np.nanmax(spectrum)\n",
+    "    spectrum = pd.Series(spectrum, index=lmbdas, name=\"transmission\")\n",
+    "    return spectrum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_name = 56.0  # 86.0\n",
+    "filter_spectrum = filters[filter_name]  # ['transmission']\n",
+    "# index = pd.Series(np.linspace(laser_cwl-40,laser_cwl+40,200))\n",
+    "# index = pd.Series(np.linspace(filter_spectrum.index[0],filter_spectrum.index[-1],10000))\n",
+    "# filter_spectrum = filter_spectrum.reindex(index=index)\n",
+    "# filter_spectrum.interpolate(method='nearest', inplace=True)\n",
+    "# index = filter_spectrum.index\n",
+    "###\n",
+    "# filter_spectrum /= filter_spectrum.max()\n",
+    "# filter_thresh = 0.8\n",
+    "# laser_cwl = (filter_spectrum > filter_thresh)[::-1].idxmax()[0]\n",
+    "###\n",
+    "laser_cwl = filter_cutoffs[filter_name]\n",
+    "new_index = pd.Index(\n",
+    "    np.linspace(laser_cwl - 40, laser_cwl + 40, 300), name=\"wavelength\"\n",
+    ")\n",
+    "filter_spectrum = simulation.interpolate_dataframe(filter_spectrum, new_index)\n",
+    "# index = filter_spectrum.index.astype(np.float).union(new_index)\n",
+    "# index.name = \"wavelength\"\n",
+    "# filter_spectrum = filter_spectrum.reindex(index=index)\n",
+    "# filter_spectrum.interpolate(method=\"linear\", inplace=True)\n",
+    "# index = filter_spectrum.index  # probably unnecessary\n",
+    "# laser_spectrum[laser_spectrum == 0] = np.nan\n",
+    "# laser_spectrum = beam_spectrum2\n",
+    "# laser_spectrum.index.name = \"transmission\"\n",
+    "###\n",
+    "# laser_spectrum = filter_spectrum\n",
+    "laser_bandwidth = 150 * 1 / u.cm\n",
+    "laser_spectrum = simulate_laser_spectrum(\n",
+    "    laser_cwl, new_index, bandwidth=laser_bandwidth\n",
+    ")\n",
+    "real_spectrum = beam_spectrum[\"Intensity\"].copy()\n",
+    "real_spectrum.name = \"transmission\"\n",
+    "real_spectrum.index += laser_cwl - real_spectrum.idxmax()\n",
+    "laser_spectrum = simulation.interpolate_dataframe(real_spectrum, new_index)\n",
+    "###\n",
+    "output_spectrum = filter_spectrum.multiply(laser_spectrum, axis=0)\n",
+    "lines = (\n",
+    "    hv.VLine(x=laser_cwl).opts(color=\"red\")\n",
+    "    * hv.VLine(x=laser_cwl + 5).opts(color=\"red\", line_dash=[2, 8])\n",
+    "    * hv.VLine(x=laser_cwl + 10).opts(color=\"red\", line_dash=\"dashed\")\n",
+    "    * hv.VLine(x=laser_cwl + 15).opts(color=\"red\", line_dash=\"dotdash\")\n",
+    "    * hv.VLine(x=laser_cwl + 20).opts(color=\"red\", line_dash=\"dotted\")\n",
+    ")\n",
+    "(\n",
+    "    (\n",
+    "        hv.Curve(np.log10(laser_spectrum))\n",
+    "        * hv.Curve(np.log10(filter_spectrum))\n",
+    "        * hv.Curve(np.log10(output_spectrum)).opts(color=\"purple\")\n",
+    "        * lines\n",
+    "        * hv.HLine(y=-2).opts(color=\"orange\")\n",
+    "        * hv.HLine(y=-4).opts(color=\"orange\")\n",
+    "        * hv.HLine(y=-6).opts(color=\"orange\")\n",
+    "    ).opts(width=600)\n",
+    "    + (\n",
+    "        hv.Curve(laser_spectrum)\n",
+    "        * hv.Curve(filter_spectrum)\n",
+    "        * hv.Curve(output_spectrum).opts(color=\"purple\")\n",
+    "        * lines\n",
+    "    )\n",
+    "    .redim(transmission=hv.Dimension(\"power\", range=(0, 1)))\n",
+    "    .opts(width=600)\n",
+    ").redim.range(wavelength=(laser_cwl - 5, laser_cwl + 35), transmission=(-8, 0)).cols(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(laser_spectrum) * hv.Curve(real_spectrum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    hv.Curve(np.log10(laser_spectrum))\n",
+    "    * hv.Curve(np.log10(real_spectrum))\n",
+    "    * lines\n",
+    "    * hv.HLine(y=-2).opts(color=\"orange\")\n",
+    "    * hv.HLine(y=-4).opts(color=\"orange\")\n",
+    "    * hv.HLine(y=-6).opts(color=\"orange\")\n",
+    ").redim.range(wavelength=(laser_cwl - 27, laser_cwl + 17), transmission=(-8, 0)).opts(\n",
+    "    width=600\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum2.name = \"transmission\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum2.columns = [\"transmission\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum3 = simulation.interpolate_dataframe(beam_spectrum2, new_index)\n",
+    "beam_spectrum3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = filter_spectrum.multiply(beam_spectrum3, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum3 * filter_spectrum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum3.index.name = \"transmission\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filter_spectrum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(np.log10(beam_spectrum3)) * hv.Curve(np.log10(laser_spectrum)) * hv.Curve(\n",
+    "    filter_spectrum\n",
+    ")"
    ]
   },
   {
