[shenker/snakenbake] Added port wayfinders. Renamed label argument to name. Margin handling is now simpler and more robust.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -154,14 +154,16 @@
     "    gap_lanes=0,\n",
     "    trench_length=35,\n",
     "    # feeding_channel_width=40,\n",
-    "    horizontal_margin=2e3,\n",
+    "    #     horizontal_margin=2e3,\n",
     "    trench_gap=20,\n",
     "    trench_width=1.4,\n",
     "    # trench_spacing=2.1,\n",
-    "    port_margin=0.6e3,\n",
-    "    top_margin=1.2e3,\n",
-    "    bottom_margin=0.6e3,\n",
-    "    draw_trenches=True,\n",
+    "    border_margin=0.5e3,\n",
+    "    port_margin=1e3,  # 0.6\n",
+    "    port_radius=750 / 2,\n",
+    "    # port_radius=0,\n",
+    "    port=True,\n",
+    "    draw_trenches=False,\n",
     "    metadata=metadata,\n",
     ")\n",
     "manifold_params = dissoc(\n",
@@ -178,9 +180,8 @@
     "            manifold_bend_radius=300,\n",
     "            manifold_margin=100,\n",
     "            feeding_channel_width=40,\n",
-    "            port_margin=0.5e3,\n",
-    "            top_margin=0.9e3,\n",
-    "            bottom_margin=0.9e3,\n",
+    "            #             port_margin=0.5e3,\n",
+    "            port=True\n",
     "            # trench_spacing=2.1,\n",
     "        ),\n",
     "    },\n",
@@ -215,15 +216,18 @@
     "        **base_params,\n",
     "    ),\n",
     "    dict(\n",
+    "        port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
     "        lanes_per_snake=3,\n",
     "        trench_spacing=2.1,\n",
     "        registration_marks=True,\n",
+    "        manifold_input_style=\"bend-in\",\n",
     "        chip_id=2,\n",
     "        mark_size=1,\n",
     "        mark_spacing=1,\n",
     "        **manifold_params,\n",
     "    ),\n",
     "    dict(\n",
+    "        port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
     "        lanes_per_snake=3,\n",
     "        trench_spacing=2.1,\n",
     "        manifold_input_style=\"u-turn\",\n",
@@ -231,9 +235,11 @@
     "        **manifold_params,\n",
     "    ),\n",
     "    dict(\n",
+    "        port_wayfinder_orientations=(\"left\", \"bottom\"),\n",
     "        lanes_per_snake=5,\n",
     "        trench_spacing=2.1,\n",
     "        registration_marks=True,\n",
+    "        manifold_input_style=\"bend-in\",\n",
     "        chip_id=3,\n",
     "        mark_size=1,\n",
     "        mark_spacing=1,\n",
@@ -254,14 +260,14 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk \\n JQS/DE/YG 200226.3\",\n",
+    "    text_right=\"Basilisk \\n JQS/DE/YG 200902\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
-    "s.write_gds(main_cell, \"200226.3basilisk.gds\")"
+    "s.write_gds(main_cell, \"designs/200902basilisk.gds\")"
    ]
   },
   {
@@ -353,6 +359,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -371,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
