--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Glass.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Glass.ipynb
@@ -13,9 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import io\n",
     "import os\n",
-    "from pathlib import PurePath\n",
-    "import zipfile\n",
-    "import yaml"
+    "import pickle"
    ]
   },
   {
@@ -33,57 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ridb_zip = zipfile.ZipFile(\"compoundprisms/rii-database-2020-01-19.zip\", mode=\"r\")\n",
-    "ridb = zipfile.Path(ridb_zip)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vendors = [\"schott\"]\n",
-    "vendors = [\n",
-    "    \"schott\",\n",
-    "    \"corning\",\n",
-    "    \"cdgm\",\n",
-    "    \"ohara\",\n",
-    "    \"hikari\",\n",
-    "    \"sumita\",\n",
-    "    \"hoya\",\n",
-    "    \"lzos\",\n",
-    "    \"barberini\",\n",
-    "    \"ami\",\n",
-    "    \"lightpath\",\n",
-    "    \"nsg\",\n",
-    "    \"vitron\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _parse_glass(entry):\n",
-    "    data = {}\n",
-    "    for d in entry[\"DATA\"]:\n",
-    "        if d[\"type\"] == \"formula 2\":\n",
-    "            d = {\n",
-    "                k: np.fromstring(v, sep=\" \") if k != \"type\" else v for k, v in d.items()\n",
-    "            }\n",
-    "        elif d[\"type\"] == \"tabulated k\":\n",
-    "            transmission = pd.read_csv(\n",
-    "                io.StringIO(d[\"data\"]),\n",
-    "                sep=r\"\\s+\",\n",
-    "                names=[\"wavelength\", \"kappa\"],\n",
-    "                index_col=\"wavelength\",\n",
-    "            ).drop_duplicates()\n",
-    "            d = {**d, \"data\": transmission}\n",
-    "        data[d[\"type\"]] = d\n",
-    "    return {**entry, \"DATA\": data}"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import opticalmaterials"
    ]
   },
   {
@@ -93,28 +43,68 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "glasses = {}\n",
-    "for zip_entry in ridb_zip.filelist:\n",
-    "    if zip_entry.is_dir():\n",
-    "        continue\n",
-    "    path = PurePath(zip_entry.filename)\n",
-    "    relpath = None\n",
-    "    for vendor in vendors:\n",
-    "        try:\n",
-    "            relpath = path.relative_to(f\"database/data/glass/{vendor}\")\n",
-    "            break\n",
-    "        except:\n",
-    "            pass\n",
-    "    if relpath is None:\n",
-    "        continue\n",
-    "    short_glass_name = relpath.name.rstrip(\".yml\")\n",
-    "    glass_name = f\"{vendor}_{short_glass_name}\"\n",
-    "    if glass_name in glasses:\n",
-    "        print(glass_name)\n",
-    "    glasses[glass_name] = True\n",
-    "    with ridb_zip.open(zip_entry, \"r\") as f:\n",
-    "        data = yaml.load(f, Loader=yaml.SafeLoader)\n",
-    "    glasses[glass_name] = _parse_glass(data)"
+    "catalog = opticalmaterials.parse_rii_catalog(\n",
+    "    \"compoundprisms/rii-database-2020-01-19.zip\"\n",
+    ")\n",
+    "with open(\"compoundprisms/rii.pickle\", \"wb\") as f:\n",
+    "    pickle.dump(catalog, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "with open(\"compoundprisms/rii.pickle\", \"rb\") as f:\n",
+    "    catalog = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog[(\"SCHOTT-LaK\", \"N-LAK12\")][\"DATA\"][\"formula 2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = opticalmaterials.get_n(catalog[(\"SCHOTT-LaK\", \"N-LAK12\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n(0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n(np.array([0.3, 1.2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = np.linspace(0.3, 1, 100)\n",
+    "plt.plot(l, n(l))"
    ]
   },
   {
@@ -122,55 +112,6 @@
    "metadata": {},
    "source": [
     "# Transmission"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# wl=data_k_wl[i];\n",
-    "# \t\tif(transmission_method && (wl<wl_n_min || wl>wl_n_max || !n_defined)) //with reflection and n not defined\n",
-    "# \t\t\tcontinue;\n",
-    "# \t\tn0=n(wl);\n",
-    "# \t\tk0=data_k[i];\n",
-    "# \t\t//internal transmittance\n",
-    "# \t\talpha=4*Math.PI*k0/wl;//Âµm^-1\n",
-    "# \t\ttau=Math.exp(-1*thickness*alpha);\n",
-    "# \t\t//Fresnel reflection\n",
-    "# \t\tn1=Complex.one;\n",
-    "# \t\tn0>=0?n2=new Complex(n0,k0):n2=new Complex(-1*n0,k0);//regular or metamaterials with n<0\n",
-    "# \t\tR=Complex.abs2(Complex.div(Complex.sub(n1,n2),Complex.add(n1,n2)));\n",
-    "# \t\t//transmittance\n",
-    "# \t\tswitch(transmission_method){\n",
-    "# \t\t\tcase 0:T=tau;break;//internal transmission\n",
-    "# \t\t\tcase 1:T=tau*(1-R)*(1-R);break;//with reflections\n",
-    "# \t\t\tcase 2:T=tau*(1-R)*(1-R)/(1-R*tau*R*tau);break;//with multiple reflections\n",
-    "# \t\t}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def transmittance(lmbda, kappa, thickness, n=None, reflections=None):\n",
-    "    if reflections not in (None, \"single\", \"multiple\"):\n",
-    "        raise ValueError(\"reflections must be one of: None, single, multiple\")\n",
-    "    alpha = 4 * np.pi * kappa / lmbda\n",
-    "    tau = np.exp(-thickness * alpha)\n",
-    "    if reflections is None:\n",
-    "        T = tau\n",
-    "    else:\n",
-    "        n2 = complex(np.abs(n), kappa)\n",
-    "        R = np.abs((1 - n2) / (1 + n2))\n",
-    "        if reflections == \"single\":\n",
-    "            T = tau * (1 - R) ** 2\n",
-    "        else:\n",
-    "            T = tau * (1 - R) ** 2 / (1 - (R * tau) ** 2)\n",
-    "    return T"
    ]
   },
   {
