[shenker/microscope_design] WIP validating beam_compression.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Prisms.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Prisms.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dispersion_target = np.deg2rad(1)  # deg\n",
+    "deltaT_target = np.deg2rad(1)\n",
     "w = np.linspace(0.4, 0.7, 20)\n",
     "n1_func = opticalmaterials.get_n(catalog[(\"SCHOTT-LaK\", \"N-LAK33A\")])\n",
     "n1 = n1_func(w)"
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prisms.optimize_singlet(w, n1, dispersion_target)"
+    "prisms.optimize_singlet(w, n1, deltaT_target)"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Doublet"
+    "## Doublet/Double-Amici"
    ]
   },
   {
@@ -190,7 +190,8 @@
     "    \"N-LAK14\",\n",
     "]\n",
     "\n",
-    "glasses_long = [[gg for gg in catalog.keys() if gg[1] == g][0] for g in glasses]"
+    "glasses_long = [[gg for gg in catalog.keys() if gg[1] == g][0] for g in glasses]\n",
+    "glasses_long = [g for g in catalog.keys() if \"SCHOTT\" in g[0]][::5]"
    ]
   },
   {
@@ -201,7 +202,9 @@
    "source": [
     "%%time\n",
     "deltaT_target = np.deg2rad(20)\n",
-    "merit = \"dev_linearity\"\n",
+    "system = \"doublet\"\n",
+    "system = \"double-amici\"\n",
+    "merit = \"dev_linearityK\"\n",
     "w = np.linspace(0.4, 0.7, 20)\n",
     "rows = []\n",
     "for glass_name1 in glasses_long:\n",
@@ -211,10 +214,17 @@
     "    except:\n",
     "        continue\n",
     "    for glass_name2 in glasses_long:\n",
+    "        n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
+    "        n2 = n2_func(w)\n",
+    "        row = prisms.optimize_doublet(\n",
+    "            w, n1, n2, deltaT_target, merit=merit, system=system\n",
+    "        )\n",
     "        try:\n",
     "            n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
     "            n2 = n2_func(w)\n",
-    "            row = prisms.optimize_doublet(w, n1, n2, deltaT_target, merit=merit)\n",
+    "            row = prisms.optimize_doublet(\n",
+    "                w, n1, n2, deltaT_target, merit=merit, system=system\n",
+    "            )\n",
     "        except:\n",
     "            continue\n",
     "        rows.append((*glass_name1, *glass_name2, *row))"
@@ -257,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doublet_df.sort_values(\"SSR\")"
+    "doublet_df.sort_values(\"deltaT\")"
    ]
   },
   {
@@ -278,40 +288,6 @@
     "w2 = np.linspace(0.35, 1, 100)\n",
     "k1 = opticalmaterials.get_k(catalog[(\"SCHOTT-LaSF\", \"N-LASF44\")])\n",
     "plt.plot(w2, opticalmaterials.transmittance(w2, k1(w2), 1e5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# double-Amici"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "deltaT_target = np.deg2rad(20)\n",
-    "merit = \"dev_linearity\"\n",
-    "w = np.linspace(0.4, 0.7, 20)\n",
-    "rows = []\n",
-    "for glass_name1 in glasses_long:\n",
-    "    try:\n",
-    "        n1_func = opticalmaterials.get_n(catalog[glass_name1])\n",
-    "        n1 = n1_func(w)\n",
-    "    except:\n",
-    "        continue\n",
-    "    for glass_name2 in glasses_long:\n",
-    "        try:\n",
-    "            n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
-    "            n2 = n2_func(w)\n",
-    "            row = prisms.optimize_doublet(w, n1, n2, deltaT_target, merit=merit)\n",
-    "        except:\n",
-    "            continue\n",
-    "        rows.append((*glass_name1, *glass_name2, *row))"
    ]
   },
   {
