[shenker/microscope_design] Double Amici seems to work.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Glass.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Glass.ipynb
@@ -11,8 +11,6 @@
     "import holoviews as hv\n",
     "import hvplot.pandas\n",
     "import matplotlib.pyplot as plt\n",
-    "import io\n",
-    "import os\n",
     "import pickle"
    ]
   },
@@ -34,6 +32,13 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import opticalmaterials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Glass catalog"
    ]
   },
   {
