--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Prisms.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Prisms.ipynb
@@ -11,7 +11,8 @@
     "import holoviews as hv\n",
     "import hvplot.pandas\n",
     "import matplotlib.pyplot as plt\n",
-    "import pickle"
+    "import pickle\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
@@ -201,24 +202,22 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "deltaT_target = np.deg2rad(20)\n",
+    "deltaT_target = np.deg2rad(25)\n",
     "system = \"doublet\"\n",
     "system = \"double-amici\"\n",
     "merit = \"dev_linearityK\"\n",
     "w = np.linspace(0.4, 0.7, 20)\n",
     "rows = []\n",
-    "for glass_name1 in glasses_long:\n",
+    "for glass_name1 in tqdm(glasses_long):\n",
     "    try:\n",
     "        n1_func = opticalmaterials.get_n(catalog[glass_name1])\n",
     "        n1 = n1_func(w)\n",
     "    except:\n",
     "        continue\n",
     "    for glass_name2 in glasses_long:\n",
-    "        n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
-    "        n2 = n2_func(w)\n",
-    "        row = prisms.optimize_doublet(\n",
-    "            w, n1, n2, deltaT_target, merit=merit, system=system\n",
-    "        )\n",
+    "        #         n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
+    "        #         n2 = n2_func(w)\n",
+    "        #         row = prisms.optimize_doublet(w, n1, n2, deltaT_target, merit=merit, system=system)\n",
     "        try:\n",
     "            n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
     "            n2 = n2_func(w)\n",
@@ -267,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doublet_df.sort_values(\"deltaT\")"
+    "doublet_df.sort_values(\"SSR\")"
    ]
   },
   {
