Replace get_drive_by_name with get_drive_by_path, replace _insert_rows with insert_sheet_rows, add workflow.insert_parts.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200727 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200727 LIB parts ingest.ipynb
@@ -358,26 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols = part_sheet.get_row(1)\n",
-    "overhang1_col = string.ascii_uppercase[cols.index(\"Upstream overhang*\")]\n",
-    "overhang2_col = string.ascii_uppercase[cols.index(\"Downstream overhang*\")]\n",
-    "seq_col = string.ascii_uppercase[cols.index(\"Sequence*\")]\n",
-    "formula_cols = {}\n",
-    "for enzyme_name in (\"BsaI\", \"BsmBI\", \"AarI\", \"BbsI\"):\n",
-    "    enzyme = getattr(Restriction, enzyme_name)\n",
-    "    site1 = enzyme.site\n",
-    "    site2 = str(Seq(site1).reverse_complement())\n",
-    "    for row, part in enumerate(parts, first_row):\n",
-    "        part[\n",
-    "            enzyme_name\n",
-    "        ] = f'=IF(AND(ISERROR(SEARCH(\"{site1}\",${seq_col}{row})), ISERROR(SEARCH(\"{site2}\",${seq_col}{row}))),\"\",\"yes\")'\n",
-    "for row, part in enumerate(parts, first_row):\n",
-    "    part[\n",
-    "        \"Type*\"\n",
-    "    ] = f\"=ArrayFormula(INDEX('Part types'!A:A, MATCH(${overhang1_col}{row}&\\\" \\\"&${overhang2_col}{row},{{'Part types'!B:B&\\\" \\\"&'Part types'!C:C}},0)))\"\n",
-    "    part[\n",
-    "        \"Correct overhangs?\"\n",
-    "    ] = f'=IF(AND(LEFT(${seq_col}{row},LEN(${overhang1_col}{row}))=${overhang1_col}{row},RIGHT(${seq_col}{row},LEN(${overhang2_col}{row}))=${overhang2_col}{row}),\"\",\"no\")'"
+    "parts = workflow.insert_parts(part_sheet, parts, first_row)"
    ]
   },
   {
@@ -387,16 +368,6 @@
    "outputs": [],
    "source": [
     "parts[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# part_sheet.spreadsheet.default_parse must be True for formula to be parsed, but this is True by default\n",
-    "workflow._insert_rows(part_sheet, first_row, parts)"
    ]
   },
   {
@@ -489,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
