[shenker/cloning] As used on 201003 to add UNS parts to LIB_parts.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200727 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200727 LIB parts ingest.ipynb
@@ -277,7 +277,7 @@
     "    part[\"Sequence*\"] = _format_seq(overhang1[0] + sequence.get_seq(seq) + overhang2[0])\n",
     "    part[\"Organism/codon usage*\"] = \"E. coli\"\n",
     "    part[\"Description\"] = plasmid[\"Description\"]\n",
-    "    # part[\"Source\"] = plasmid[\"Source*\"]\n",
+    "    # part[\"Reference\"] = plasmid[\"Source*\"]\n",
     "    return part\n",
     "\n",
     "\n",
