--- a/paulssonlab/src/paulssonlab/shenker/cloning/201003 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201003 3G.ipynb
@@ -109,6 +109,7 @@
     "strain_sheet = gc.open_by_key(col[\"strains\"]).worksheet()\n",
     "plasmid_sheet = gc.open_by_key(col[\"plasmids\"]).worksheet()\n",
     "part_sheet = gc.open_by_key(col[\"parts\"]).worksheet()\n",
+    "part_sequences_sheet = gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"Sequences\")\n",
     "oligo_sheet = gc.open_by_key(col[\"oligos\"]).worksheet()"
    ]
   },
@@ -128,6 +129,15 @@
    "metadata": {},
    "source": [
     "# GG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gibson.assemble -> hhh"
    ]
   },
   {
@@ -191,216 +201,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UNS parts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oligos = oligo_sheet.get_as_df()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oligos.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uns_tops = oligos[\n",
-    "    oligos[\"Name\"].str.startswith(\"UNS\")\n",
-    "    & oligos[\"Name\"].str.contains(\"Top\")\n",
-    "    & ~oligos[\"Name\"].str.contains(\"Flipped\")\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uns_bottoms = oligos[\n",
-    "    oligos[\"Name\"].str.startswith(\"UNS\")\n",
-    "    & oligos[\"Name\"].str.contains(\"Bottom\")\n",
-    "    & ~oligos[\"Name\"].str.contains(\"Flipped\")\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for idx in range(len(uns_tops)):\n",
-    "    assert Seq(uns_tops.iloc[idx][\"Sequence*\"]).reverse_complement() == Seq(\n",
-    "        uns_bottoms.iloc[idx][\"Sequence*\"]\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first_row = 141  # workflow.get_next_empty_row(part_sheet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uns_tops.head()  # .iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uns_tops.index[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "uns_tops.loc[84, \"ID*\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _format_seq(seq):\n",
-    "    return str(seq).lower()\n",
-    "\n",
-    "\n",
-    "def get_bottom_oligo(seq, bottoms):\n",
-    "    matching = bottoms[bottoms[\"Sequence*\"] == Seq(seq).reverse_complement()]\n",
-    "    num_matching = len(matching)\n",
-    "    if num_matching != 1:\n",
-    "        raise ValueError(\n",
-    "            f\"expected one reverse-compliment, instead found {num_matching}\"\n",
-    "        )\n",
-    "    x = matching[\"ID*\"].iloc[0]\n",
-    "    return x\n",
-    "\n",
-    "\n",
-    "enzyme = Restriction.BsaI\n",
-    "\n",
-    "parts = []\n",
-    "for idx in uns_tops.index:\n",
-    "    seq = uns_tops.loc[idx, \"Sequence*\"]\n",
-    "    subseqs = golden_gate.re_digest(seq, enzyme, linear=True)\n",
-    "    print(subseqs)\n",
-    "    # seq, overhang1, overhang2 = subseqs[0]\n",
-    "    part = {}\n",
-    "    # part[\"Name*\"] = plasmid[\"Names\"].split(\",\")[-1]\n",
-    "    # part[\"Tags\"] = plasmid[\"Tags\"]\n",
-    "    # part[\"Plasmid/Oligos (Cutter)*\"] = f\"{plasmid_id}/{enzyme.__name__}\"\n",
-    "    part[\"Plasmid/Oligos (Cutter)*\"] = \"{}/{}\".format(\n",
-    "        uns_tops.loc[idx, \"ID*\"], get_bottom_oligo(seq, uns_bottoms)\n",
-    "    )\n",
-    "    part[\"Author*\"] = \"Richard Murray lab\"\n",
-    "    part[\"Date*\"] = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
-    "    # part[\"Upstream overhang*\"] = _format_seq(overhang1[0])\n",
-    "    # part[\"Downstream overhang*\"] = _format_seq(overhang2[0])\n",
-    "    # part[\"Sequence*\"] = _format_seq(overhang1[0] + sequence.get_seq(seq)+ overhang2[0])\n",
-    "    part[\"Organism/codon usage*\"] = \"E. coli\"\n",
-    "    # part[\"Description\"] = plasmid[\"Description\"]\n",
-    "    # part[\"Source\"] = plasmid[\"Source*\"]\n",
-    "    parts.append(part)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dummy_seq = Seq(\"CGTCTCGGTCTCaAATGaaaaAGGTtGAGACCgGAGACG\")\n",
-    "dummy_seq2 = Seq(\"aaaaAGGTtGAGACCgGAGACG\")\n",
-    "dummy_seq3 = Seq(\"CGTCTCGGTCTCaAATGaaaa\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "golden_gate.re_digest(dummy_seq, Restriction.BsaI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "golden_gate.re_digest(dummy_seq2, Restriction.BsaI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "golden_gate.re_digest(dummy_seq3, Restriction.BsaI, allow_single=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "golden_gate.re_search(seq, enzyme, linear=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parts[0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 3G"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = \"@gibson(@goldengate(UNS1, J23101, BCD11, mVenus, L3S3P11, UNS5), @goldengate(UNS5, J23150, CFP, BCD16, L3S2P55, UNS10))\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = \"@3G(UNS1, J23101, BCD11, mVenus, L3S3P11, UNS5; UNS5, J23150, CFP, BCD16, L3S2P55, UNS10)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = \"@3G(UNS1-J23101-BCD11-mVenus-L3S3P11-UNS5, UNS5+J23150+CFP+BCD16+L3S2P55+UNS10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Twist API"
+    "# Command parsing"
    ]
   },
   {
@@ -409,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import tatsu"
    ]
   },
   {
@@ -418,8 +253,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get(\"https://twist-api.twistdna.com/healthcheck\")\n",
-    "print(r, r.content)"
+    "grammar = \"\"\"@@grammar::CALC\n",
+    "\n",
+    "\n",
+    "start\n",
+    "    =\n",
+    "    expression $\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "expression\n",
+    "    =\n",
+    "    | left:expression op:'+' ~ right:term\n",
+    "    | left:expression op:'-' ~ right:term\n",
+    "    | term\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "term\n",
+    "    =\n",
+    "    | left:term op:'*' ~ right:factor\n",
+    "    | left:term '/' ~ right:factor\n",
+    "    | factor\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "factor\n",
+    "    =\n",
+    "    | '(' ~ @:expression ')'\n",
+    "    | number\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "number\n",
+    "    =\n",
+    "    /\\d+/\n",
+    "    ;\n",
+    "\"\"\""
    ]
   },
   {
@@ -428,8 +298,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get(\"https://twist-api.twistbioscience-staging.com/healthcheck\")\n",
-    "print(r, r.content)"
+    "grammar2 = \"\"\"@@grammar::CALC\n",
+    "\n",
+    "\n",
+    "start\n",
+    "    =\n",
+    "    expression $\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "expression\n",
+    "    =\n",
+    "    | addition\n",
+    "    | subtraction\n",
+    "    | term\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "addition\n",
+    "    =\n",
+    "    left:expression op:'+' ~ right:term\n",
+    "    ;\n",
+    "\n",
+    "subtraction\n",
+    "    =\n",
+    "    left:expression op:'-' ~ right:term\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "term\n",
+    "    =\n",
+    "    | multiplication\n",
+    "    | division\n",
+    "    | factor\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "multiplication\n",
+    "    =\n",
+    "    left:term op:'*' ~ right:factor\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "division\n",
+    "    =\n",
+    "    left:term op:'/' ~ right:factor\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "factor\n",
+    "    =\n",
+    "    | '(' ~ @:expression ')'\n",
+    "    | number\n",
+    "    ;\n",
+    "\n",
+    "\n",
+    "number\n",
+    "    =\n",
+    "    /\\d+/\n",
+    "    ;\"\"\""
    ]
   },
   {
@@ -438,13 +365,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.post(\n",
-    "    \"https://twist-api.twistbioscience-staging.com/api-token-verify\",\n",
-    "    headers={\n",
-    "        \"Token\": \"eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6ImM0ZjRmNWI2LTUwOWQtNDI5NC05NDY0LTg4ZWJiYzg4YjZkOSIsInVzZXJfaWQiOiI0MDM1NmI3Ny01N2ZkLTRhZmQtYWU0OC1iODE2ZjJlMzJiOGUiLCJ1c2VybmFtZSI6ImhhcnZhcmRfYXBpIiwiZXhwIjoxNjY3MTQyNjQ4fQ.oAvKsw7VdIUTr9myYHxfhokge5bAgPmJDrgQVHrNwDk\"\n",
-    "    },\n",
+    "parser = tatsu.compile(grammar2)\n",
+    "# ast = parser.parse('3 + 5 * ( 10 - 20 )')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CalcSemantics(object):\n",
+    "    def number(self, ast):\n",
+    "        return int(ast)\n",
+    "\n",
+    "    def addition(self, ast):\n",
+    "        return ast.left + ast.right\n",
+    "\n",
+    "    def subtraction(self, ast):\n",
+    "        return ast.left - ast.right\n",
+    "\n",
+    "    def multiplication(self, ast):\n",
+    "        return ast.left * ast.right\n",
+    "\n",
+    "    def division(self, ast):\n",
+    "        return ast.left / ast.right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ast = parser.parse(\"3 + 5 * ( 10 - 20 )\", semantics=CalcSemantics())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ast"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \"quoted DNA\"\n",
+    "# oLIB1+oLIB2\n",
+    "# /"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grammar = \"\"\"@@grammar::CLONING\n",
+    "@@whitespace :: //\n",
+    "\n",
+    "start = command $ ;\n",
+    "\n",
+    "ws = /\\s*/ ;\n",
+    "\n",
+    "command_name = '@' ~ @:/\\w+/ ;\n",
+    "\n",
+    "command_arglist = '(' ~ ws @+:argument ws {',' ws @+:argument ws }* ')' ;\n",
+    "\n",
+    "command = command_name:command_name arguments:command_arglist ;\n",
+    "\n",
+    "argument\n",
+    "    =\n",
+    "    | quoted_string\n",
+    "    | command\n",
+    "    | float\n",
+    "    | int\n",
+    "    | assembly\n",
+    "    | name\n",
+    "    ;\n",
+    "\n",
+    "float = float:/\\d+\\.\\d+/ ;\n",
+    "\n",
+    "int = int:/\\d+/ ;\n",
+    "\n",
+    "name = name:/\\w+/ ;\n",
+    "\n",
+    "assembly = assembly+:name {'-' ~ assembly+:name}+ ;\n",
+    "\n",
+    "quoted_string = '\"' ~ quoted_string:/[^\"]*/ '\"' ;\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = tatsu.compile(grammar)\n",
+    "ast = parser.parse(\n",
+    "    '@foo(blah, blah2, blah3-blah4, @bar(x1, x2, 3, \"a\", \" AAtg \", 5, 8.7))'\n",
     ")\n",
-    "print(r, r.content)"
+    "ast"
    ]
   },
   {
@@ -453,14 +489,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "username, password = \"harvard_api\", \"f42PZ8mgZwHTHqss\"\n",
-    "token = \"eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6ImM0ZjRmNWI2LTUwOWQtNDI5NC05NDY0LTg4ZWJiYzg4YjZkOSIsInVzZXJfaWQiOiI0MDM1NmI3Ny01N2ZkLTRhZmQtYWU0OC1iODE2ZjJlMzJiOGUiLCJ1c2VybmFtZSI6ImhhcnZhcmRfYXBpIiwiZXhwIjoxNjY3MTQyNjQ4fQ.oAvKsw7VdIUTr9myYHxfhokge5bAgPmJDrgQVHrNwDk\"\n",
-    "r = requests.post(\n",
-    "    \"https://twist-api.twistbioscience-staging.com/api-token-auth\",\n",
-    "    headers={\"Token\": token, \"username\": username, \"password\": password},\n",
-    "    auth=(username, password),\n",
+    "def goldengate(*args):\n",
+    "    return args\n",
+    "\n",
+    "\n",
+    "def gibson(*args):\n",
+    "    return args\n",
+    "\n",
+    "\n",
+    "def threeg(*args):\n",
+    "    return args\n",
+    "\n",
+    "\n",
+    "commands = {\"GG\": goldengate, \"Gib\": gibson, \"3G\": threeg}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = (\n",
+    "    \"@3G(UNS1-J23101-BCD11-mVenus-L3S3P11-UNS5, UNS5-J23150-CFP-BCD16-L3S2P55-UNS10)\"\n",
     ")\n",
-    "print(r, r.content)"
+    "# command = \"@Gib(@GG(UNS1, J23101, BCD11, mVenus, L3S3P11, UNS5), @GG(UNS5, J23150, CFP, BCD16, L3S2P55, UNS10))\""
    ]
   },
   {
@@ -469,11 +522,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get(\n",
-    "    \"https://twist-api.twistbioscience-staging.com/login\",\n",
-    "    auth=(\"harvard_api\", \"f42PZ8mgZwHTHqss\"),\n",
-    ")\n",
-    "print(r, r.content)"
+    "ast = parser.parse(command)\n",
+    "ast"
    ]
   },
   {
@@ -482,14 +532,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests, json\n",
-    "tapi_session = requests.Session()\n",
-    "tapi_session.headers.update({\"Authorization\": \"JWT %s\" % apitoken, \"X-End-User-Token\": eutoken})\n",
-    "resp = tapi_session.get('/v1/accounts/')\n",
-    "assert resp.status_code == 200\n",
-    "deserialized = json.loads(resp.content)\n",
-    "deserialized_first_result = deserialized[0]\n",
-    "resp = tapi_session.get('/v1/accounts/%s/users/' % deserialized_first_result['id'], headers={\"Authorization\", \"JWT %s\" % token, 'X-End-User-Token': eut})"
+    "class CloningCommandSemantics(object):\n",
+    "    def command(self, ast):\n",
+    "        if ast.command_name not in commands:\n",
+    "            raise tatsu.semantics.SemanticError(\n",
+    "                \"command must be one of: {}\".format(\n",
+    "                    \", \".join([f\"@{k}\" for k in commands.keys()])\n",
+    "                )\n",
+    "            )\n",
+    "        command = commands[ast.command_name]\n",
+    "        return command(ast.arguments)\n",
+    "\n",
+    "    def int_(self, ast):\n",
+    "        return int(s)\n",
+    "\n",
+    "    def float_(self, ast):\n",
+    "        return float(s)\n",
+    "\n",
+    "    def name(self, ast):\n",
+    "        return ast.name\n",
+    "\n",
+    "    def assembly(self, ast):\n",
+    "        return ast.assembly\n",
+    "\n",
+    "    def default_(self, ast):\n",
+    "        print(\"foo\")\n",
+    "\n",
+    "\n",
+    "parser.parse(command, semantics=CloningCommandSemantics())"
    ]
   },
   {
@@ -497,10 +567,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "resp = requests.get('/v1/prices/', headers={\"Authorization\", \"JWT %s\" % token, 'X-End-User-Token': eut})\n",
-    "resp = requests.get('/v1/accounts/001Q00000197g2CIAQ/prices/', headers={\"Authorization\", \"JWT %s\" % token, 'X-End-User-Token': eut})"
-   ]
+   "source": []
   }
  ],
  "metadata": {
